// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsPage Snapshot Tests should match snapshot when loaded 1`] = `
<div
  class="max-w-4xl mx-auto space-y-6"
>
  <div>
    <h1
      class="text-3xl font-bold text-foreground"
    >
      Settings
    </h1>
    <p
      class="text-muted-foreground mt-2"
    >
      Manage your account settings and preferences
    </p>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight flex items-center space-x-2"
      >
        <svg
          class="lucide lucide-user w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
        <span>
          Account Information
        </span>
      </h3>
    </div>
    <div
      class="p-6 pt-0 space-y-4"
    >
      <div>
        <label
          class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium text-muted-foreground"
        >
          Email
        </label>
        <p
          class="text-foreground"
        />
      </div>
      <div>
        <label
          class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium text-muted-foreground"
        >
          User ID
        </label>
        <p
          class="text-foreground font-mono text-sm"
        />
      </div>
      <div>
        <label
          class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium text-muted-foreground"
        >
          Account Created
        </label>
        <p
          class="text-foreground"
        >
          N/A
        </p>
      </div>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight flex items-center space-x-2"
      >
        <svg
          class="lucide lucide-shield w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
          />
        </svg>
        <span>
          Terms & Privacy
        </span>
      </h3>
    </div>
    <div
      class="p-6 pt-0"
    >
      <div>
        <label
          class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium text-muted-foreground"
        >
          Terms Accepted
        </label>
        <p
          class="text-foreground"
        >
          1/1/2024
        </p>
      </div>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight flex items-center space-x-2"
      >
        <svg
          class="lucide lucide-settings w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
        <span>
          Default Settings
        </span>
      </h3>
      <p
        class="text-sm text-muted-foreground"
      >
        Configure default values for new reports
      </p>
    </div>
    <div
      class="p-6 pt-0 space-y-4"
    >
      <div
        class="space-y-2"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="default-signature-name"
        >
          Default Signature Name
        </label>
        <input
          class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="default-signature-name"
          placeholder="Dr. Jane Smith"
          value="Dr. Test User"
        />
      </div>
      <div
        class="space-y-2"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="default-date-format"
        >
          Default Date Format
        </label>
        <select
          aria-label="Default date format"
          class="w-full px-3 py-2 border border-input rounded-md bg-background"
          id="default-date-format"
        >
          <option
            value="MM/DD/YYYY"
          >
            MM/DD/YYYY
          </option>
          <option
            value="DD/MM/YYYY"
          >
            DD/MM/YYYY
          </option>
          <option
            value="YYYY-MM-DD"
          >
            YYYY-MM-DD
          </option>
        </select>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      >
        Save Settings
      </button>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight flex items-center space-x-2"
      >
        <svg
          class="lucide lucide-wifi w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 20h.01"
          />
          <path
            d="M2 8.82a15 15 0 0 1 20 0"
          />
          <path
            d="M5 12.859a10 10 0 0 1 14 0"
          />
          <path
            d="M8.5 16.429a5 5 0 0 1 7 0"
          />
        </svg>
        <span>
          System Status
        </span>
      </h3>
    </div>
    <div
      class="p-6 pt-0 space-y-4"
    >
      <div
        class="flex items-center justify-between"
      >
        <span
          class="text-muted-foreground"
        >
          API Connectivity
        </span>
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="w-2 h-2 bg-accent rounded-full"
          />
          <span
            class="text-accent-foreground"
          >
            Connected
          </span>
        </div>
      </div>
      <div
        class="flex items-center justify-between"
      >
        <span
          class="text-muted-foreground"
        >
          Last Updated
        </span>
        <span
          class="text-foreground"
        >
          1/1/2024, 2:00:00 AM
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SettingsPage Snapshot Tests should match snapshot when loading 1`] = `
<div
  class="max-w-4xl mx-auto space-y-6"
>
  <div>
    <h1
      class="text-3xl font-bold text-foreground"
    >
      Settings
    </h1>
    <p
      class="text-muted-foreground mt-2"
    >
      Manage your account settings and preferences
    </p>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight flex items-center space-x-2"
      >
        <svg
          class="lucide lucide-user w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
        <span>
          Account Information
        </span>
      </h3>
    </div>
    <div
      class="p-6 pt-0 space-y-4"
    >
      <div>
        <label
          class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium text-muted-foreground"
        >
          Email
        </label>
        <p
          class="text-foreground"
        />
      </div>
      <div>
        <label
          class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium text-muted-foreground"
        >
          User ID
        </label>
        <p
          class="text-foreground font-mono text-sm"
        />
      </div>
      <div>
        <label
          class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium text-muted-foreground"
        >
          Account Created
        </label>
        <p
          class="text-foreground"
        >
          N/A
        </p>
      </div>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight flex items-center space-x-2"
      >
        <svg
          class="lucide lucide-shield w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
          />
        </svg>
        <span>
          Terms & Privacy
        </span>
      </h3>
    </div>
    <div
      class="p-6 pt-0"
    >
      <div>
        <label
          class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium text-muted-foreground"
        >
          Terms Accepted
        </label>
        <p
          class="text-foreground"
        >
          Not accepted
        </p>
      </div>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight flex items-center space-x-2"
      >
        <svg
          class="lucide lucide-settings w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
        <span>
          Default Settings
        </span>
      </h3>
      <p
        class="text-sm text-muted-foreground"
      >
        Configure default values for new reports
      </p>
    </div>
    <div
      class="p-6 pt-0 space-y-4"
    >
      <div
        class="space-y-2"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="default-signature-name"
        >
          Default Signature Name
        </label>
        <input
          class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="default-signature-name"
          placeholder="Dr. Jane Smith"
          value=""
        />
      </div>
      <div
        class="space-y-2"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="default-date-format"
        >
          Default Date Format
        </label>
        <select
          aria-label="Default date format"
          class="w-full px-3 py-2 border border-input rounded-md bg-background"
          id="default-date-format"
        >
          <option
            value="MM/DD/YYYY"
          >
            MM/DD/YYYY
          </option>
          <option
            value="DD/MM/YYYY"
          >
            DD/MM/YYYY
          </option>
          <option
            value="YYYY-MM-DD"
          >
            YYYY-MM-DD
          </option>
        </select>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      >
        Save Settings
      </button>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight flex items-center space-x-2"
      >
        <svg
          class="lucide lucide-wifi w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 20h.01"
          />
          <path
            d="M2 8.82a15 15 0 0 1 20 0"
          />
          <path
            d="M5 12.859a10 10 0 0 1 14 0"
          />
          <path
            d="M8.5 16.429a5 5 0 0 1 7 0"
          />
        </svg>
        <span>
          System Status
        </span>
      </h3>
    </div>
    <div
      class="p-6 pt-0 space-y-4"
    >
      <div
        class="flex items-center justify-between"
      >
        <span
          class="text-muted-foreground"
        >
          API Connectivity
        </span>
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="animate-spin rounded-full h-4 w-4 border-b-2 border-primary"
          />
          <span
            class="text-muted-foreground"
          >
            Checking...
          </span>
        </div>
      </div>
      <div
        class="flex items-center justify-between"
      >
        <span
          class="text-muted-foreground"
        >
          Last Updated
        </span>
        <span
          class="text-foreground"
        >
          Never
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SettingsPage Snapshot Tests should match snapshot when saving 1`] = `
<div
  class="max-w-4xl mx-auto space-y-6"
>
  <div>
    <h1
      class="text-3xl font-bold text-foreground"
    >
      Settings
    </h1>
    <p
      class="text-muted-foreground mt-2"
    >
      Manage your account settings and preferences
    </p>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight flex items-center space-x-2"
      >
        <svg
          class="lucide lucide-user w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
        <span>
          Account Information
        </span>
      </h3>
    </div>
    <div
      class="p-6 pt-0 space-y-4"
    >
      <div>
        <label
          class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium text-muted-foreground"
        >
          Email
        </label>
        <p
          class="text-foreground"
        />
      </div>
      <div>
        <label
          class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium text-muted-foreground"
        >
          User ID
        </label>
        <p
          class="text-foreground font-mono text-sm"
        />
      </div>
      <div>
        <label
          class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium text-muted-foreground"
        >
          Account Created
        </label>
        <p
          class="text-foreground"
        >
          N/A
        </p>
      </div>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight flex items-center space-x-2"
      >
        <svg
          class="lucide lucide-shield w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
          />
        </svg>
        <span>
          Terms & Privacy
        </span>
      </h3>
    </div>
    <div
      class="p-6 pt-0"
    >
      <div>
        <label
          class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium text-muted-foreground"
        >
          Terms Accepted
        </label>
        <p
          class="text-foreground"
        >
          1/1/2024
        </p>
      </div>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight flex items-center space-x-2"
      >
        <svg
          class="lucide lucide-settings w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
        <span>
          Default Settings
        </span>
      </h3>
      <p
        class="text-sm text-muted-foreground"
      >
        Configure default values for new reports
      </p>
    </div>
    <div
      class="p-6 pt-0 space-y-4"
    >
      <div
        class="space-y-2"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="default-signature-name"
        >
          Default Signature Name
        </label>
        <input
          class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
          id="default-signature-name"
          placeholder="Dr. Jane Smith"
          value="Dr. Test User"
        />
      </div>
      <div
        class="space-y-2"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="default-date-format"
        >
          Default Date Format
        </label>
        <select
          aria-label="Default date format"
          class="w-full px-3 py-2 border border-input rounded-md bg-background"
          id="default-date-format"
        >
          <option
            value="MM/DD/YYYY"
          >
            MM/DD/YYYY
          </option>
          <option
            value="DD/MM/YYYY"
          >
            DD/MM/YYYY
          </option>
          <option
            value="YYYY-MM-DD"
          >
            YYYY-MM-DD
          </option>
        </select>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      >
        Save Settings
      </button>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight flex items-center space-x-2"
      >
        <svg
          class="lucide lucide-wifi w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 20h.01"
          />
          <path
            d="M2 8.82a15 15 0 0 1 20 0"
          />
          <path
            d="M5 12.859a10 10 0 0 1 14 0"
          />
          <path
            d="M8.5 16.429a5 5 0 0 1 7 0"
          />
        </svg>
        <span>
          System Status
        </span>
      </h3>
    </div>
    <div
      class="p-6 pt-0 space-y-4"
    >
      <div
        class="flex items-center justify-between"
      >
        <span
          class="text-muted-foreground"
        >
          API Connectivity
        </span>
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="w-2 h-2 bg-accent rounded-full"
          />
          <span
            class="text-accent-foreground"
          >
            Connected
          </span>
        </div>
      </div>
      <div
        class="flex items-center justify-between"
      >
        <span
          class="text-muted-foreground"
        >
          Last Updated
        </span>
        <span
          class="text-foreground"
        >
          1/1/2024, 2:00:00 AM
        </span>
      </div>
    </div>
  </div>
</div>
`;
